# Drone-detection-dataset

./: .gitignore  _train_annotation_custom.jsonl  create_yolo_upload_format.py  dino.ipynb  extract_frames.py  label_images.py  label_with_dino.py  output.jsonl  pyproject.toml  rename_move_output_frames.py  setup.sh
scripts/: extract_frames.sh
